public/css/style1.css
body {
    font-family: sans-serif;
    font-size: 14px;
}

#mce-EMAIL {
    width: 200px;
    margin-top: 10px;
    font-family: sans-serif;
}

#mc-embedded-subscribe {
    margin-top: 5px;
    font-family: sans-serif;
}

#overlay{
    width: 100%;
    margin-top: 155px;
    position: absolute;
    visibility: visible;
}

#displayUpdate {
    color: #b5b5b5;
    font-size: 8px;
    padding-top: 9px;
    padding-left: 10px;
    font-style: italic;
    cursor: pointer;
}

.textinfo {
    text-align: center;
    line-height: 2em;
    font-weight: bold;

}

.textinfo input {
    font-size: 12px;
}

.centerblock {
    width: 320px;
    height: 610px;
    /*border: 1px solid black;*/
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.imgblock {
    width: 320px;
    height: 568px;
    /*border: 1px solid pink;*/
    float: left;
    background-size: 320px 568px;
    background-repeat: no-repeat;
    overflow:hidden;
}

#imgb {
    height: 0;
}
#imgc {
    height: 0;
}
#imgb > * {
    display: none;
    height: 0;
}
#imgc > * {
    display: none;
    height: 0;
}

@media only screen and (min-width: 1026px) {
    /* For desktop: */

    #overlay{
        margin-top: -10px;
    }
    .centerblock {
        width: 960px;
    }
    .textinfo {
        float: right;
        text-align: right;
    }
    #imgb > * {
        display: block;
        width: 320px;
        height: 568px;
    }
    #imgc > * {
        display: block;
        width: 320px;
        height: 568px;
    }
    #imgb {
        height: 568px;
    }
    #imgc {
        height: 568px;
    }

    .textinfo {
        width: 960px;
        line-height: 1em;
    }

    .textinfo .left {
        float: left;
        display: inline-block;
    }

    #mc_embed_signup {
    background:#fff; 
    font:14px sans-serif; 
    float: right;
    display: inline-block;
    padding-top: 15px;
    }

    #mc_embed_signup a img {
        float: right;
    }
}

@media (max-height: 580px) {
    .centerblock {
        bottom: auto;
    }
}

/*mail chimp*/
#mc_embed_signup {
    background:#fff; 
    font:12px sans-serif; 
    display: inline-block;

}

